--- a/js/directives/templates/question-radio.html
+++ b/js/directives/templates/question-radio.html
@@ -1,5 +1,5 @@
 <div class="slider">
-  <div class="quest">&mdash; {{questions.text}} ? {{qq}} &mdash;</div>
+  <div class="quest">&mdash; {{questions.text}} ? &mdash;</div>
   <div class="answers">
     <div class="radio" ng-repeat="answer in questions.radio">
       <label>
