--- a/js/views/home/home.html
+++ b/js/views/home/home.html
@@ -1,9 +1,5 @@
 <div class="jumbotron text-center">
     <h1>DotaCafe story #1</h1>
     <p>Поездка на великий <span class="text-danger">The International</span> с тобой в главной роли.</p>
-
-    <a ui-sref=".authors" class="btn btn-primary">Авторы</a>
-    <a ui-sref=".participants" class="btn btn-danger">Участники</a>
+    <a ui-sref="step-100-choose-friends" class="btn btn-danger"> Go! </a>
 </div>
-
-<div ui-view></div>
