--- a/css/app.css
+++ b/css/app.css
@@ -5,7 +5,7 @@ header {
   border: 1px solid #000;
   padding: 10px;
 }
-.friends {
+.friends, .tracks {
   height: 300px;
   overflow-y: auto;
   cursor: pointer;
@@ -23,12 +23,23 @@ header {
   background: #930000;
   color: #FFF;
 }
+/*checked*/
+.checked {
+  background: #930000;
+  color: #FFF;
+}
 .one-friend__img {
   padding: 3px 0 0 0;
 }
-.one-friend__label {
+.one-friend__label, .one-track-info {
   font-size: 10px;
 }
 .btn-next {
   margin: 10px auto;
+}
+.one-track__ico, .one-track-info {
+  display: inline-block;
+}
+.one-track-info__artist {
+  font-weight: bold;
 }
