--- a/js/views/steps/step-100-choose-friends.html
+++ b/js/views/steps/step-100-choose-friends.html
@@ -14,7 +14,7 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <a ui-sref="step-200-choose-music" class="btn btn-danger" ng-disabled="!(friendCounter === 4)" ng-click="setTeam()">Собрал пати? {{!(friendCounter === 4)}} Погнали!</a>
+      <a ui-sref="step-200-choose-music" class="btn btn-danger" ng-disabled="!(friendCounter === 4)" ng-click="setTeam()">Собрал пати? Погнали!</a>
     </div>
   </div>
 </div>
