--- a/js/views/steps/step-100-choose-friends.html
+++ b/js/views/steps/step-100-choose-friends.html
@@ -1,8 +1,9 @@
-<div class="step-100">
-  <h3>Выбери друзей в пати: {{friendCounter}} из 4</h3>
+<div class="step">
+  <h3>Выбери друзей в пати: {{answers}} из 4</h3>
   <div class="friends col-md-12">
     <div ng-repeat="friend in vkFriends">
-      <div class="one-friend" ng-click="chooseFriend(friend)" ng-class="{'one-friend_checked':friend.checked}" ng-animate="'animate'">
+      <!-- setCheck(object, maximum answers) -->
+      <div class="one-friend" ng-click="setChecked(friend,4)" ng-class="{'checked':friend.checked}">
         <img class="one-friend__img" ng-src="{{friend.photo_50}}" alt="{{friend.last_name}} {{friend.first_name}}" />
         <div class="one-friend__label">
           {{friend.last_name}}
@@ -14,7 +15,8 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <a ui-sref="step-200-choose-music" class="btn btn-danger" ng-disabled="!(friendCounter === 4)" ng-click="setTeam()">Собрал пати? Погнали!</a>
+      <!-- setCheck(repeat collection, variable name for store in global ASKER) -->
+      <a ui-sref="step-200-choose-music" class="btn btn-danger" ng-disabled="!(answers === 4)" ng-click="setAnswers('vkFriends','team')">Собрал пати? Погнали!</a>
     </div>
   </div>
 </div>
