--- a/js/views/steps/step-300-choose-commentator.html
+++ b/js/views/steps/step-300-choose-commentator.html
@@ -1,8 +1,14 @@
-<div class="step-100">
+<div class="step">
   <h3>Выбери комментатора</h3>
   <div class="row">
     <div class="commentators col-md-12">
       в процессе {{commentators}}
+    </div>
+    <div class="test">
+      {{asker.team}}
+    </div>
+    <div class="test">
+      {{asker.music}}
     </div>
   </div>
 </div>
