--- a/js/views/steps/step-100-choose-friends.html
+++ b/js/views/steps/step-100-choose-friends.html
@@ -1,22 +1,24 @@
 <div class="step">
   <h3>Выбери друзей в пати: {{answers}} из 4</h3>
-  <div class="friends col-md-12">
-    <div ng-repeat="friend in vkFriends">
-      <!-- setCheck(object, maximum answers) -->
-      <div class="one-friend" ng-click="setChecked(friend,4)" ng-class="{'checked':friend.checked}">
-        <img class="one-friend__img" ng-src="{{friend.photo_50}}" alt="{{friend.last_name}} {{friend.first_name}}" />
-        <div class="one-friend__label">
-          {{friend.last_name}}
-          <br>
-          {{friend.first_name}}
+  <div class="row">
+    <div class="friends col-md-12">
+      <div ng-repeat="friend in vkFriends">
+        <!-- setCheck(object, maximum answers) -->
+        <div class="one-friend" ng-click="setChecked(friend,4)" ng-class="{'checked':friend.checked}">
+          <img class="one-friend__img" ng-src="{{friend.photo_50}}" alt="{{friend.last_name}} {{friend.first_name}}" />
+          <div class="one-friend__label">
+            {{friend.last_name}}
+            <br>
+            {{friend.first_name}}
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="row">
+  <asker-next url="'step-200-choose-music'" answers="answers" label="'Собрал пати? Погнали!'" maximum="4" store-obj="'vkFriends'" store-name="'team'"></asker-next>
+  <!-- <div class="row">
     <div class="col-md-12">
-      <!-- setCheck(repeat collection, variable name for store in global ASKER) -->
       <a ui-sref="step-200-choose-music" class="btn btn-danger" ng-disabled="!(answers === 4)" ng-click="setAnswers('vkFriends','team')">Собрал пати? Погнали!</a>
     </div>
-  </div>
+  </div> -->
 </div>
