--- a/js/views/steps/step-200-choose-music.html
+++ b/js/views/steps/step-200-choose-music.html
@@ -1,8 +1,9 @@
 <div class="step">
   <h3>Выбери трэк, под который ты тащишь всегда</h3>
-  <div class="tracks col-md-12">
-    <div ng-repeat="track in vkAudio">
-      <div class="one-track" ng-click="setChecked(track,1)" ng-class="{'checked':track.checked}">
+  <div class="row">
+    <div class="tracks col-md-12">
+      <div ng-repeat="track in vkAudio">
+        <div class="one-track" ng-click="setCheckedOne(track,vkAudio)" ng-class="{'checked':track.checked}">
           <div class="one-track__ico">
             <span class="glyphicon glyphicon-headphones"></span>
           </div>
@@ -14,9 +15,10 @@
       </div>
     </div>
   </div>
-  <div class="row">
+  <asker-next url="'step-300-choose-commentator'" label="'Кто будет комментировать?'" maximum="1" store-obj="'vkAudio'" store-name="'music''"></asker-next>
+  <!-- <div class="row">
     <div class="col-md-12">
      <a ui-sref="step-300-choose-commentator" class="btn btn-danger" ng-disabled="!(answers === 1)" ng-click="setAnswers('vkAudio','music')">Дальше!</a>
     </div>
-  </div>
+  </div> -->
 </div>
