--- a/js/views/steps/step-300-choose-commentator.html
+++ b/js/views/steps/step-300-choose-commentator.html
@@ -14,6 +14,6 @@
     </div> <!-- ./commentators -->
   </div>
 
-  <asker-next url="'step-400-questions'" label="'Пора проверить знания'" maximum="1" for-storing-data="['commentators','commentator']"></asker-next>
+  <asker-next url="'step-400-questions'" answers="answers" label="'Пора проверить знания'" maximum="1" handler="setAnswers(commentators,'commentator')"></asker-next>
 
 </div>
