--- a/js/directives/templates/asker-next.html
+++ b/js/directives/templates/asker-next.html
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col-md-12">
-   <a ui-sref="{{url}}" class="btn btn-danger" ng-disabled="!(answers === {{maximum}})" ng-click="setAnswers(storeObj,storeName)">{{url}}</a>
+   <a ui-sref="{{url}}" class="btn btn-danger" ng-disabled="!(answers === {{maximum}})" ng-click="handler()">{{label}}</a>
   </div>
 </div>
