--- a/js/views/steps/step-200-choose-music.html
+++ b/js/views/steps/step-200-choose-music.html
@@ -15,10 +15,7 @@
       </div>
     </div>
   </div>
-  <asker-next url="'step-300-choose-commentator'" label="'Кто будет комментировать?'" maximum="1" store-obj="'vkAudio'" store-name="'music''"></asker-next>
-  <!-- <div class="row">
-    <div class="col-md-12">
-     <a ui-sref="step-300-choose-commentator" class="btn btn-danger" ng-disabled="!(answers === 1)" ng-click="setAnswers('vkAudio','music')">Дальше!</a>
-    </div>
-  </div> -->
+
+  <asker-next url="'step-300-choose-commentator'" answers="answers" label="'Кто будет комментировать?'" maximum="1" handler="setAnswers('vkAudio','music')"></asker-next>
+
 </div>
